<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.38">

    <androidx.cardview.widget.CardView style="@style/DefaultCardView">

        <ImageView style="@style/BackgroundCardView"/>

        <TextView
            style="@style/DefaultCardTextView"
            android:layout_marginLeft="60dp"
            android:text="@string/text_cardNumbers_tittle" />

        <EditText
            android:id="@+id/edit_minimum"
            android:layout_width="79dp"
            android:hint="@string/input_cardNumbers_minimum"
            android:layout_marginLeft="110dp"
            style="@style/DefaultCardNumberEditText" />

        <TextView
            android:text="@string/text_cardNumbers_tittle2"
            style="@style/DefaultCardTextView"
            android:layout_marginLeft="195dp"/>

        <EditText
            android:id="@+id/edit_maximum"
            android:hint="@string/input_cardNumbers_maximum"
            android:layout_marginLeft="210dp"
            android:layout_width="91dp"
            style="@style/DefaultCardNumberEditText" />

        <Button
            android:id="@+id/button_sorted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/green"
            android:text="@string/button_cardNumbers"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="80dp" />

        <TextView
            android:id="@+id/txt_result"
            style="@style/DefaultCardResult"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>