<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="60dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/card_numbers">

    <androidx.cardview.widget.CardView style="@style/DefaultCardView">

        <ImageView style="@style/BackgroundCardView"/>

        <EditText
            android:id="@+id/input_cardNames_name"
            android:hint="@string/input_cardNames_name"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/button_cardNames_add"
            android:backgroundTint="@color/green"
            android:text="@string/button_cardNames_add"
            android:layout_marginLeft="15dp"
            style="@style/DefaultCardButton"/>

        <Button
            android:id="@+id/button_cardNames_sort"
            android:backgroundTint="@color/green"
            android:layout_marginLeft="142dp"
            android:text="@string/button_cardNames_sort"
            style="@style/DefaultCardButton"/>

        <Button
            android:id="@+id/button_cardNames_clear"
            android:layout_marginLeft="255dp"
            android:backgroundTint="@color/red"
            android:text="@string/button_cardNames_clear"
            style="@style/DefaultCardButton" />

        <TextView
            android:id="@+id/txt_cardNames_result"
            style="@style/DefaultCardResult"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>