<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tittle"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/txt_cardNumber_tittle"
        android:layout_width="370dp"
        android:layout_height="240dp"
        android:layout_marginBottom="160dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/button_cardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/button_cardNumbers"
            app:cornerRadius="80dp" />

        <TextView
            android:id="@+id/text_cardNumbers_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_cardNumbers_tittle"
            android:textColor="@color/white"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/input_cardNumbers_minimum"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="@string/input_cardNumbers_minimum"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="4"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/input_cardNumbers_maximum"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="@string/input_cardNumbers_maximum"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="4"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/txt_cardNumbers_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_names"
        android:layout_width="370dp"
        android:layout_height="240dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cardNumber_tittle" >

        <TextView
            android:id="@+id/txt_cardNames_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>